# paperless-ngx-smart-ocr

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml  tailwind.config.js
.claude/hooks/: protect-env.sh
src/paperless_ngx_smart_ocr/: __init__.py  __main__.py
src/paperless_ngx_smart_ocr/cli/: __init__.py
src/paperless_ngx_smart_ocr/config/: __init__.py  exceptions.py  schema.py  settings.py
src/paperless_ngx_smart_ocr/observability/: __init__.py  logging.py
src/paperless_ngx_smart_ocr/paperless/: __init__.py  client.py  exceptions.py  models.py
src/paperless_ngx_smart_ocr/pipeline/: __init__.py  exceptions.py  layout.py  llm_services.py  models.py  orchestrator.py  pdf_utils.py  preprocessing.py  stage1_ocr.py  stage2_markdown.py
src/paperless_ngx_smart_ocr/web/: __init__.py  app.py  archive.py  auth.py  preview_store.py
src/paperless_ngx_smart_ocr/web/routes/: __init__.py  auth.py  documents.py  health.py  jobs.py  views.py
src/paperless_ngx_smart_ocr/web/static/js/: app.js
src/paperless_ngx_smart_ocr/web/templates/: base.html  index.html  login.html
src/paperless_ngx_smart_ocr/web/templates/documents/: detail.html  list.html
src/paperless_ngx_smart_ocr/web/templates/jobs/: detail.html  list.html
src/paperless_ngx_smart_ocr/web/templates/partials/: apply_result.html  bulk_jobs.html  bulk_review_row.html  bulk_review_table.html  document_row.html  document_table.html  error.html  job_card.html  job_list.html  preview_modal.html  process_result.html
src/paperless_ngx_smart_ocr/workers/: __init__.py  exceptions.py  models.py  queue.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_archive.py  test_config.py  test_logging.py  test_orchestrator.py  test_paperless_client.py  test_pipeline.py  test_preview_store.py  test_queue.py  test_web_app.py  test_web_auth.py  test_web_documents.py  test_web_jobs.py  test_web_views.py
